feat: correções e melhorias no backend
- Adicionado campo subcategoriaId ao Animal
- Adicionado PEIXE ao enum TipoAnimalEnum
- Corrigido JWT token com role ADMIN
- Corrigido DataLoader para remover campo horario
- Adicionado endpoints preventivos e terapêuticos
- Removido campo horario de TratamentoTerapeutico
- Adicionado migration V4 para subcategoriaId
- Adicionado arquivos JWT (AuthenticationEntryPoint, Filter, TokenProvider)